--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -864,7 +864,7 @@
                 </div>
                 <div class="col-md-5 col-xs-12">
                     <div class="profile-item-container side">
-                        <h4 id="communicationLoc" class="profile-item-title">Communications</h4>
+                        <h4 id="communicationLoc" class="profile-item-title">{{ _("Communications") }}</h4>
                         <br/>
                         {{profileEmail(person)}}
                         {{profileLocale(person)}}
