fix survey date/time in PRO Assessment Section in profile

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -658,7 +658,7 @@
                                                 (index % 2 != 0 ? 'class="odd"': 'class="even"') + '>' +
                                                 [entry['questionnaire']['display'],
                                                  entry['status'],
-                                                 String(entries[0]['authored']).replace(/[tz]/gi, " ")].map(function(o) {
+                                                 String(entry['authored']).replace(/[tz]/gi, " ")].map(function(o) {
                                                     return  '<td><a href="' + reportLink + '">' + o + '</a></td>'
                                                  }).join('') +
                                                  '</tr>';
