buttons backgrond style css fixes - in profile

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -159,6 +159,12 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     cursor: pointer;
     font-size: 1em;
     padding: 0.5em 0.8em;
+    background: #fff;
+    background-image: -webkit-linear-gradient(top, #fff, #eee);
+    background-image: -moz-linear-gradient(top, #fff, #eee);
+    background-image: -ms-linear-gradient(top, #fff, #eee);
+    background-image: -o-linear-gradient(top, #fff, #eee);
+    background-image: linear-gradient(to bottom, #fff, #eee);
     -webkit-box-shadow: 1px 1px 1px 0px #777;
     -moz-box-shadow: 1px 1px 1px 0px #777;
     box-shadow: 1px 1px 1px 0px #777;
@@ -703,9 +709,15 @@ input.clinic {
 
 #userSessionReportDetailHeader span.glyphicon
 {
--webkit-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
--moz-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.2);
+background: #fff;
+background-image: -webkit-linear-gradient(top, #fff, #eee);
+background-image: -moz-linear-gradient(top, #fff, #eee);
+background-image: -ms-linear-gradient(top, #fff, #eee);
+background-image: -o-linear-gradient(top, #fff, #eee);
+background-image: linear-gradient(to bottom, #fff, #eee);
+-webkit-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.4);
+-moz-box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.4);
+box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.4);
 border-left: 1px solid #ddd;
 border-top: 1px solid #ddd;
 border-radius: 4px;
