--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -105,6 +105,12 @@ transform(-1000px, 0);*/
   cursor: pointer;
   font-size: 1em;
   padding: 0.5em 0.8em;
+  background: #fff;
+  background-image: -webkit-linear-gradient(top, #fff, #eee);
+  background-image: -moz-linear-gradient(top, #fff, #eee);
+  background-image: -ms-linear-gradient(top, #fff, #eee);
+  background-image: -o-linear-gradient(top, #fff, #eee);
+  background-image: linear-gradient(to bottom, #fff, #eee);
   -webkit-box-shadow: 1px 1px 1px 0px #777;
   -moz-box-shadow: 1px 1px 1px 0px #777;
   box-shadow: 1px 1px 1px 0px #777;
@@ -590,9 +596,15 @@ input.clinic {
   margin-left: -1%;
 }
 #userSessionReportDetailHeader span.glyphicon {
-  -webkit-box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
+  background: #fff;
+  background-image: -webkit-linear-gradient(top, #fff, #eee);
+  background-image: -moz-linear-gradient(top, #fff, #eee);
+  background-image: -ms-linear-gradient(top, #fff, #eee);
+  background-image: -o-linear-gradient(top, #fff, #eee);
+  background-image: linear-gradient(to bottom, #fff, #eee);
+  -webkit-box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.4);
   border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
   border-radius: 4px;
