--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -107,9 +107,9 @@
 
                     });</script>
                     <br/>
+                    <br/>
                     {{profileSaveBtn()}}
             </div>
-            <br/>
             <br/>
             <div>
                 {{ back_btn('patients','Patients List')}}
@@ -217,10 +217,15 @@ $(document).ready(function(){
 
                 hasError = false;
 
-                if ($("#current_user_email").val() === $("#email").val()) {
-                    setHelpText("emailGroup", "Email is already in use.", true);
+                if ($("#emailGroup").hasClass("has-error")) {
+                    hasError = true;
                 } else {
-                    setHelpText("emailGroup", "", false);
+
+                    if ($("#current_user_email").val() === $("#email").val()) {
+                        setHelpText("emailGroup", "Email is already in use.", true);
+                    } else {
+                        setHelpText("emailGroup", "", false);
+                    };
                 };
 
 
