adding reminder text to user in login page to use email address, Truenth ONLY

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -80,6 +80,10 @@ body {
   display: none;
 }
 
+#loginEmailReminderText {
+  display: none;
+}
+
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
