--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -76,6 +76,15 @@ a.btn {
   transition: visibility 0.5s ease-in;
 }
 
+#loginEmailReminderText
+{
+  margin-left: 8px;
+  font-size: 0.87em; 
+  text-align: left;
+  padding: 0.1em auto;
+  color: #5a5a5a;
+
+}
 .save-info {
   opacity: 0;
    -webkit-transition: opacity 0.8s ease-in;
@@ -384,7 +393,7 @@ a.btn {
 }
 #wellContent {
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   // TODO - Add browser specific styles, check compatibility
   transform: translate(-50%, -50%);
@@ -1223,8 +1232,14 @@ div.input-group.date {
   }
 
   #wellContainer .tnth-well {
-    height: 60%;
+  height: 65%;
   }
+
+  #wellContainer .btn {
+  font-size: 0.9em;
+  }
+
+
   .profile-item-container {
    padding: 1em;
    max-width: 100%;
