--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -51,6 +51,9 @@ body {
 #socialMediaRegistrationContainer {
   display: none;
 }
+#loginEmailReminderText {
+  display: none;
+}
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
