--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -50,6 +50,16 @@ a.btn {
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
 }
+
+#loginEmailReminderText
+{
+  margin-left: 8px;
+  font-size: 0.87em; 
+  text-align: left;
+  padding: 0.1em auto;
+  color: #5a5a5a;
+
+}
 .save-info {
   opacity: 0;
   -webkit-transition: opacity 0.8s ease-in;
@@ -334,7 +344,7 @@ a.btn {
 }
 #wellContent {
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -1106,7 +1116,11 @@ div.input-group.date {
     display: inline-block;
   }
   #wellContainer .tnth-well {
-    height: 60%;
+    height: 65%;
+  }
+
+  #wellContainer .btn {
+    font-size: 0.9em;
   }
   .profile-item-container {
     padding: 1em;
