add maintenance notice to landing page

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -19,12 +19,10 @@
         <div id="wellContainer">
 
             <div class="tnth-splash">
-
                 <div id="wellContent">
-
+                 <div id="sysMaintenanceContainer" class="alert alert-warning" role="alert" style="font-size:0.75em; width:500px; max-width:100%; margin: 0 auto; padding:10px"><em><b>Please Note</b></em>: The system will be down for maintenance this Wednesday, 12/07/2016, between 10 a.m. to 2 p.m.</div>
                     <div class="headline">Tools for navigating the prostate cancer journey</div>
                     <a href="/user/register" class="btn feature-btn feature-btn-primary">Register</a>
-
                 </div>
                 <div class="tnth-splash-bottom">
                     <a href="/user/sign-in" class="tnth-splash-bottom-link">Login</a><span class="tnth-splash-bottom-link separator"></span><a href="/explore" class="tnth-splash-bottom-link">Explore</a>
@@ -40,3 +38,4 @@
 </div>
 
 {% endblock %}
+
