Restore pre v16.12.* about page look, without empty maps, etc.

--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -4,18 +4,9 @@
 
   {{ back_btn(PORTAL, _('Home')) }}
 
-  <h3 class="tnth-headline">{{ _("Who We Are") }}</h3>
+  <h3 class="tnth-headline">{{ _("About TrueNTH") }}</h3>
 
   <p>{{ about_tnth|safe }}</p>
-
-  <div class="thumbnail" style="height: 240px">{{ _("USA Map") }}</div>
-
-  <h3 class="tnth-headline">{{ _("What Is Movember Foundation") }}</h3>
-
-  <p>{{ about_mo|safe }}</p>
-
-  <hr />
-  <br />
 
   {% if config.metadata.version %}
   <br />
